fix border radius on ios

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -366,7 +366,7 @@ a:hover {
 
 .arrow-down {
   height: 40px;
-  border-radius: 50%;
+  border-radius: 40px;
   outline: 3px solid orange;
   outline-offset: 15px;
   animation: move-up-down 3s infinite;
